css/default.css
/* ... */
:not(section).collapse:not(.expanded) > .disclosure-button ~ :not(.abstract-collapse) {
    max-height: 5rem;
}

:not(section).collapse:not(.expanded) > .disclosure-button {
    --button-color: var(--GW-collapse-disclosure-button-color-15-percent-transparent);

    background-color: var(--button-color);
}
:not(section).collapse > .disclosure-button {
    transition:
        box-shadow 0.1s ease,
        color 0.1s ease,
        background-color 0.1s ease;
}
:not(section).collapse:not(.expanded) > .disclosure-button:hover {
    --button-color: var(--GW-collapse-disclosure-button-hover-color-15-percent-transparent);
}
:not(section).collapse:not(.expanded) > .disclosure-button::before,
:not(section).collapse:not(.expanded) > .disclosure-button::after {
    --button-color: var(--GW-collapse-disclosure-button-color);
}
:not(section).collapse:not(.expanded) > .disclosure-button:hover::before,
:not(section).collapse:not(.expanded) > .disclosure-button:hover::after {
    --button-color: var(--GW-collapse-disclosure-button-hover-color);
}
:not(section).collapse:not(.expanded) > .disclosure-button::before {
    width: 3rem;
    height: 3rem;
    padding: 0;
    top: 0;
    right: 0;
    background-position: calc(100% - 1rem) 0.75rem;
}
:not(section).collapse:not(.expanded) > .disclosure-button::after {
    width: 10em;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
}
:not(section).collapse:not(.expanded) > .disclosure-button {
    box-shadow: none;
}
:not(section).collapse.expanded {
    padding-top: 3.5rem;
    padding-bottom: 2.5rem;
    padding: 3.5rem 0 2.5rem 1em;
}

:not(section).collapse:not(.expanded) .abstract-collapse:not(.abstract) {
    margin: 0.5em 0;
}

/***************************/
/*  Collapsible code blocks.
 */
.sourceCode .collapse,
.sourceCode.collapse {
    margin: 1.75em auto;
}
.sourceCode .collapse > pre,
.sourceCode.collapse > pre {
    margin: 0;
}
.collapse:not(.expanded) > .disclosure-button ~ pre:not(.abstract-collapse) {
    border: 1px solid var(--GW-pre-element-border-color);
    box-sizing: border-box;
}
.sourceCode .collapse:not(.expanded) > .disclosure-button,
.sourceCode.collapse:not(.expanded) > .disclosure-button {
    width: calc(100% - (1em + 2px));
}
.sourceCode :not(section).collapse:not(.expanded) > .disclosure-button,
.sourceCode:not(section).collapse:not(.expanded) > .disclosure-button {
    --button-color: var(--GW-collapse-disclosure-button-color-30-percent-transparent);
}
.sourceCode :not(section).collapse:not(.expanded) > .disclosure-button:hover,
.sourceCode:not(section).collapse:not(.expanded) > .disclosure-button:hover {
    --button-color: var(--GW-collapse-disclosure-button-hover-color-30-percent-transparent);
}
.sourceCode:not(section).collapse:not(.expanded) > .disclosure-button::before {
    top: 1px;
    right: 1px;
}
.sourceCode:not(section).collapse:not(.expanded) > .disclosure-button::after {
    bottom: 1px;
}

/**********************/
/*  Collapsible tables.
 */
.table-wrapper > .collapse {
    margin: 0;
    min-height: unset;
}
.table-wrapper > .collapse:not(.expanded) {
    max-height: calc(4.75rem + 1px);
    margin-left: 1em;
    padding: 0;
}
.table-wrapper > .collapse:not(.expanded) > .disclosure-button::before {
    top: 2px;
}
.table-wrapper > .collapse:not(.expanded) > .disclosure-button::after {
    bottom: 1px;
}

/****************************/
/*  Collapses in blockquotes.
 */
blockquote :not(section).collapse:not(.expanded),
blockquote :not(section).collapse.expanded {
    padding-left: 1.25em;
    padding-right: 1.25em;
    margin-left: -1.25em;
    margin-right: -1.25em;
}
blockquote > :not(section).collapse:last-child {
    margin-bottom: -1em;
}

@media only screen and (max-width: 649px) {
    blockquote :not(section).collapse:not(.expanded),
    blockquote :not(section).collapse.expanded {
        padding-left: 1em;
        padding-right: 1em;
        margin-left: -1em;
        margin-right: -1em;
    }
    blockquote > :not(section).collapse:last-child {
        margin-bottom: -0.75em;
    }
}

blockquote .collapse::before {
    background-color: var(--GW-blockquote-background-color);
}
blockquote .collapse:not(.expanded) > .disclosure-button {
    --button-color: var(--GW-collapse-in-blockquote-disclosure-button-color-30-percent-transparent);
}
blockquote .collapse:not(.expanded) > .disclosure-button:hover {
    --button-color: var(--GW-collapse-in-blockquote-disclosure-button-hover-color-30-percent-transparent);
}
blockquote :not(section).collapse:not(.expanded) > .disclosure-button::before,
blockquote :not(section).collapse:not(.expanded) > .disclosure-button::after {
    --button-color: var(--GW-collapse-in-blockquote-disclosure-button-color);
}
blockquote :not(section).collapse:not(.expanded) > .disclosure-button:hover::before,
blockquote :not(section).collapse:not(.expanded) > .disclosure-button:hover::after {
    --button-color: var(--GW-collapse-in-blockquote-disclosure-button-hover-color);
}
blockquote .disclosure-button::before {
    color: var(--GW-collapse-in-blockquote-disclosure-button-top-part-text-color);
    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z" fill="%23AAA"/></svg>');
}
blockquote .disclosure-button::after {
    color: var(--GW-collapse-in-blockquote-disclosure-button-bottom-part-text-color);
}

/************/
/* HEADINGS */
/************/

/* HEADER H1-6 HIERARCHY */
h1, h2, h3, h4, h5, h6 {
    margin: 1.25em 0 0.5em -0.75rem;
    font-weight: bold;
    position: relative;
}
@media only screen and (max-width: 649px) {
    h1, h2, h3, h4, h5, h6 {
        margin: 1.25em 0 0.5em 0;
    }
}
/* ... */

